--- a/pushnotifications/build.gradle
+++ b/pushnotifications/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.android.library' version '8.5.0' // Use Gradle 8.5 compatible version
-    id 'kotlin-android' version '1.7.21' // Adjust if needed, but 1.7.21 works with 8.5
+    id("com.android.library")
+    id("kotlin-android")
 }
 
 android {
