Upgraded from Gradle 6.3 -> 8.0

--- a/pushnotifications/maven-push.gradle
+++ b/pushnotifications/maven-push.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'maven-publish'
 
 def isReleaseBuild() {
     return VERSION_NAME.contains("SNAPSHOT") == false
@@ -24,17 +24,22 @@ def getRepositoryPassword() {
 }
 
 afterEvaluate { project ->
-    uploadArchives {
-        repositories {
-            mavenDeployer {
-                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+    publishing {
+        publications {
+            maven(MavenPublication) { // Assuming you have a publication named 'maven'
+                groupId = GROUP
+                artifactId = POM_ARTIFACT_ID
+                version = VERSION_NAME
 
-                println("beforeDeployment")
+                // Configure POM elements within pom.withXml for flexibility
+                pom.withXml {
+                    def root = asNode()
+                    root.appendNode('name', POM_NAME)
+                    root.appendNode('packaging', POM_PACKAGING)
+                    // ... Add other POM elements as needed
+                }
 
-                pom.groupId = GROUP
-                pom.artifactId = POM_ARTIFACT_ID
-                pom.version = VERSION_NAME
-
+                // Configure repositories based on build type
                 repository(url: getReleaseRepositoryUrl()) {
                     authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
                 }
@@ -42,36 +47,15 @@ afterEvaluate { project ->
                     authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
                 }
 
-                pom.project {
-                    name POM_NAME
-                    packaging POM_PACKAGING
-                    description POM_DESCRIPTION
-                    url POM_URL
-
-                    scm {
-                        url POM_SCM_URL
-                        connection POM_SCM_CONNECTION
-                        developerConnection POM_SCM_DEV_CONNECTION
-                    }
-
-                    licenses {
-                        license {
-                            name POM_LICENCE_NAME
-                            url POM_LICENCE_URL
-                            distribution POM_LICENCE_DIST
-                        }
-                    }
-
-                    developers {
-                        developer {
-                            id POM_DEVELOPER_ID
-                            name POM_DEVELOPER_NAME
-                        }
-                    }
+                // Enable signing for release builds
+                signing {
+                    isRequired { isReleaseBuild() && gradle.taskGraph.hasTask("uploadArchives") }
+                    sign configurations.archives
                 }
             }
         }
     }
+
 
     signing {
         required { isReleaseBuild() && gradle.taskGraph.hasTask("uploadArchives") }
