--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,18 @@ allprojects {
         google()
         jcenter()
     }
+
+    subprojects {
+        afterEvaluate { project ->
+            if (project.hasProperty('android')) {
+                project.android {
+                    if (namespace == null) {
+                        namespace project.group
+                    }
+                }
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
