--- a/pushnotifications/build.gradle
+++ b/pushnotifications/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id("com.android.library")
-    id("kotlin-android")
+    id("kotlin-parcelize")
     id("maven-publish")
 }
 
@@ -29,6 +29,10 @@ android {
 
     defaultConfig {
         consumerProguardFiles 'proguard-rules.pro'
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 
     compileOptions {
